--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@expo-google-fonts/pacifico": "^0.2.0",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
@@ -15,6 +19,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal": "^12.0.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
